<resources>
    <string name="app_name">KeyChest</string>
    <string name="signIn">SIGN IN</string>
    <string name="signUp">SIGN UP</string>
    <string name="userEmail">Email</string>
    <string name="userPassword">Password</string>
    <string name="verifyPassword">Verify your password</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="txtRegister">Register</string>
    <string name="conditions">Accept terms of conditions</string>
    <string name="NotRegister">Don\'t have an account?</string>
    <string name="MessageToRegister">Please check your email to verify your account</string>
    <string name="newInput">New</string>
    <string name="categorySpinner">Select category:</string>
    <string name="nameDataView">Name:</string>
    <string name="category">Category:</string>
    <string name="nameDataDescriptionView">Description:</string>
    <string name="passwordDataView">Password:</string>
    <string name="sendData">SUBMIT</string>
    <string name="genPassword">AUTOGEN</string>
    <string name="revealPassword">REVEAL</string>
    <string name="hidePassword">HIDE</string>
    <string name="deleteData">DELETE</string>
    <string name="modifyData">MODIFY</string>
    <string name="viewData">VIEW</string>
    <string name="copyData">COPY</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="change">CHANGE</string>
    <string name="titleRecover">Account recovery</string>
    <string name="titleSignUpMessage">Confirm your account</string>
    <string name="Aceptar">Accept</string>
    <string name="Cancelar">Cancel</string>
    <string name="sendEmail">If you don\'t receive email verification, press here!!</string>
    <string name="textResetAccount">Caution, this action will delete all information in your account. If you accept, we send you an email verification</string>
    <string name="textConfirmAccount">We have sent an email to validate your account, click on the link to use the application.</string>
</resources>