<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@drawable/gradientbackground">
    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/txtRegister"
        style="@style/TitleTextStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txtEmail"
        />
    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userEmail"
        android:inputType="text"
        android:layout_margin="16dp"
        android:layout_marginTop="150dp"
        android:padding="16dp"
        android:fontFamily="@font/font"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="16dp"
        android:background="@drawable/custom_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegister"
        app:layout_constraintBottom_toTopOf="@+id/txtPassword"/>
    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userPassword"
        android:inputType="textPassword"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:fontFamily="@font/font"
        android:drawableStart="@drawable/custom_password_icon"
        android:drawablePadding="16dp"
        android:background="@drawable/custom_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        app:layout_constraintBottom_toTopOf="@+id/txtPasswordVerify"/>
    <EditText
        android:id="@+id/txtPasswordVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/verifyPassword"
        android:inputType="textPassword"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:fontFamily="@font/font"
        android:drawableStart="@drawable/custom_password_icon"
        android:background="@drawable/custom_input"
        android:drawablePadding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"
        app:layout_constraintBottom_toTopOf="@+id/checkConditions"
        />
    <CheckBox
        android:id="@+id/checkConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conditions"
        android:padding="16dp"
        style="@style/normalTextStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordVerify"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
        />
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        style="@style/BtnStyle"
        android:background="@drawable/btnshape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkConditions"
        app:layout_constraintBottom_toTopOf="@+id/txtMessageRegister"/>

    <TextView
        android:id="@+id/txtMessageRegister"
        style="@style/normalTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/MessageToRegister"
        android:visibility="gone"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />
</androidx.constraintlayout.widget.ConstraintLayout>