<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecoveryAccountActivity"
    android:background="@drawable/gradientbackground">

    <TextView
        android:id="@+id/txtRecover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/titleRecover"
        style="@style/TitleTextStyle"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txtRecoverEmail" />
    <EditText
        android:id="@+id/txtRecoverEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userEmail"
        android:inputType="text"
        android:layout_margin="16dp"
        android:layout_marginTop="150dp"
        android:padding="16dp"
        android:fontFamily="@font/font"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="16dp"
        android:background="@drawable/custom_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRecover"
        app:layout_constraintBottom_toTopOf="@+id/txtRecoverPassword"/>
    <EditText
        android:id="@+id/txtRecoverPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userPassword"
        android:inputType="textPassword"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:fontFamily="@font/font"
        android:drawableStart="@drawable/custom_password_icon"
        android:drawablePadding="16dp"
        android:background="@drawable/custom_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRecoverEmail"
        app:layout_constraintBottom_toTopOf="@+id/txtRecoverPasswordVerify"/>
    <EditText
        android:id="@+id/txtRecoverPasswordVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/verifyPassword"
        android:inputType="textPassword"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:fontFamily="@font/font"
        android:drawableStart="@drawable/custom_password_icon"
        android:background="@drawable/custom_input"
        android:drawablePadding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRecoverPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmitRecovery"
        />

    <Button
        android:id="@+id/btnSubmitRecovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendData"
        style="@style/BtnStyle"
        android:background="@drawable/btnshape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRecoverPasswordVerify"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>