<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:orientation="vertical"
    android:background="@drawable/gradientbackground">
    <include layout="@layout/app_toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/TitleTextStyle"
            android:id="@+id/txtTitleSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/settings"
            android:layout_gravity="center"/>
        <TextView
            style="@style/labelStyle"
            android:id="@+id/txtViewEmailUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/userEmail" />
        <EditText
            style="@style/normalTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtEmailUser"
            android:padding="16dp"
            android:layout_margin="16dp"
            android:fontFamily="@font/font"
            android:drawablePadding="16dp"
            android:inputType="text"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_email_icon"
            android:enabled="false"
            android:hint="@string/userEmail"
            android:focusable="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/labelStyle"
            android:id="@+id/txtPasswordDataView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/passwordDataView" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                style="@style/normalTextStyle"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtDataPassword"
                android:drawableStart="@drawable/custom_password_icon"
                android:padding="16dp"
                android:layout_margin="16dp"
                android:fontFamily="@font/font"
                android:drawablePadding="16dp"
                android:inputType="textPassword"
                android:enabled="false"
                android:background="@drawable/custom_input"
                android:hint="@string/passwordDataView"/>
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:id="@+id/fabRevealData"
                android:tooltipText="@string/revealPassword"
                android:textSize="14sp"
                android:background="@drawable/btnshape"
                android:src="@drawable/baseline_remove_red_eye_24"
                android:contentDescription="@string/revealPassword" />
        </LinearLayout>

        <Button
            style="@style/BtnStyle"
            android:id="@+id/btnEnableChangeUserData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/change"
            android:background="@drawable/btnshape"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/lytChangeUserData">
        <TextView
            style="@style/labelStyle"
            android:id="@+id/txtViewVerifyPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/verifyPassword" />
        <EditText
            style="@style/normalTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtVerifyPassword"
            android:drawableStart="@drawable/custom_password_icon"
            android:padding="16dp"
            android:layout_margin="16dp"
            android:fontFamily="@font/font"
            android:drawablePadding="16dp"
            android:inputType="textPassword"
            android:background="@drawable/custom_input"
            android:hint="@string/verifyPassword"/>
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:id="@+id/fabChangeUserData"
            android:tooltipText="@string/sendData"
            android:textSize="14sp"
            android:background="@drawable/btnshape"
            android:backgroundTint="@color/submit"
            android:src="@drawable/baseline_check_24"
            android:contentDescription="@string/sendData"
            android:layout_gravity="center"/>
    </LinearLayout>

</LinearLayout>