<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateDataActivity"
    android:background="@drawable/gradientbackground">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/menu"
        android:layout_width="match_parent"
        style="@style/ToolBarStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="end"
            android:src="@drawable/iconokeychestblack"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        style="@style/labelStyle"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/categorySpinner"
        android:id="@+id/txtCategoryView"
        app:layout_constraintBottom_toTopOf="@+id/txtNameDataView"
        app:layout_constraintEnd_toStartOf="@+id/category_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu" />

    <Spinner
        style="@style/labelStyle"
        app:layout_constraintTop_toBottomOf="@+id/menu"
        app:layout_constraintBottom_toTopOf="@+id/txtNameData"
        app:layout_constraintStart_toEndOf="@+id/txtCategoryView"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/category_spinner"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:textAlignment="center"
        android:textSize="24sp"/>

    <TextView
        style="@style/labelStyle"
        app:layout_constraintTop_toBottomOf="@+id/txtCategoryView"
        app:layout_constraintBottom_toTopOf="@+id/txtDescriptionDataView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/category_spinner"
        android:id="@+id/txtNameDataView"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:text="@string/nameDataView" />
    <EditText
        style="@style/normalTextStyle"
        app:layout_constraintTop_toBottomOf="@+id/category_spinner"
        app:layout_constraintBottom_toTopOf="@+id/txtDescriptionData"
        app:layout_constraintStart_toEndOf="@+id/txtNameDataView"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/txtNameData"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:background="@drawable/custom_input"
        android:inputType="text"
        android:hint="@string/nameDataView"/>

    <TextView
        style="@style/labelStyle"
        app:layout_constraintTop_toBottomOf="@+id/txtNameDataView"
        app:layout_constraintBottom_toTopOf="@+id/txtPasswordData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtDescriptionData"
        android:id="@+id/txtDescriptionDataView"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:text="@string/nameDataDescriptionView" />
    <EditText
        style="@style/normalTextStyle"
        app:layout_constraintTop_toBottomOf="@+id/txtNameData"
        app:layout_constraintBottom_toTopOf="@+id/txtPasswordData"
        app:layout_constraintStart_toEndOf="@+id/txtDescriptionDataView"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/txtDescriptionData"
        android:hint="@string/nameDataDescriptionView"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:background="@drawable/custom_input"
        android:inputType="text"
        />

    <EditText
        style="@style/normalTextStyle"
        app:layout_constraintTop_toBottomOf="@+id/txtDescriptionData"
        app:layout_constraintBottom_toTopOf="@+id/btnDataSubmit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnRandomPassword"
        android:id="@+id/txtPasswordData"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:hint="@string/userPassword"
        android:textColorHint="@android:color/darker_gray"
        android:background="@drawable/custom_input"
        android:inputType="textPassword"/>

    <Button
        style="@style/BtnStyle"
        app:layout_constraintTop_toBottomOf="@+id/txtDescriptionData"
        app:layout_constraintBottom_toTopOf="@+id/btnDataSubmit"
        app:layout_constraintStart_toEndOf="@+id/txtPasswordData"
        app:layout_constraintEnd_toStartOf="@+id/btnRevealPassword"
        android:id="@+id/btnRandomPassword"
        android:layout_width="85dp"
        android:layout_height="50dp"
        android:text="@string/genPassword"
        android:textSize="14sp"
        android:background="@drawable/btnshape"/>

    <ImageButton
        app:layout_constraintTop_toBottomOf="@+id/txtDescriptionData"
        app:layout_constraintBottom_toTopOf="@+id/btnDataSubmit"
        app:layout_constraintStart_toEndOf="@+id/btnRandomPassword"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/btnRevealPassword"
        android:tooltipText="@string/revealPassword"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:textSize="14sp"
        android:background="@drawable/btnshape"
        android:src="@drawable/baseline_remove_red_eye_24"
        android:foregroundGravity="center"/>
    <Button
        style="@style/BtnStyle"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordData"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/btnDataSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendData"
        android:background="@drawable/btnshape"/>
</androidx.constraintlayout.widget.ConstraintLayout>