<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradientbackground">
    <include layout="@layout/app_toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/labelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/category"
            android:id="@+id/txtCategoryView" />
        <Spinner
            app:layout_constraintTop_toBottomOf="@+id/appbar"
            app:layout_constraintBottom_toTopOf="@+id/txtNameData"
            app:layout_constraintStart_toEndOf="@+id/txtCategoryView"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/category_spinnerData"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:textAlignment="center"
            android:textSize="24sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/labelStyle"
            android:id="@+id/txtNameDataView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/nameDataView" />
        <EditText
            style="@style/normalTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDataName"
            android:padding="16dp"
            android:layout_margin="16dp"
            android:fontFamily="@font/font"
            android:drawablePadding="16dp"
            android:inputType="text"
            android:background="@drawable/custom_input"
            android:enabled="false"
            android:hint="@string/nameDataView" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/labelStyle"
            android:id="@+id/txtDescriptionDataView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/nameDataDescriptionView" />
        <EditText
            style="@style/normalTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDataDescription"
            android:padding="16dp"
            android:layout_margin="16dp"
            android:fontFamily="@font/font"
            android:drawablePadding="16dp"
            android:inputType="text"
            android:background="@drawable/custom_input"
            android:enabled="false"
            android:hint="@string/nameDataDescriptionView"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            style="@style/normalTextStyle"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/txtDataPassword"
            android:padding="16dp"
            android:layout_margin="16dp"
            android:fontFamily="@font/font"
            android:drawablePadding="16dp"
            android:inputType="textPassword"
            android:enabled="false"
            android:background="@drawable/custom_input"
            android:hint="@string/passwordDataView"/>
        <ImageButton
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:id="@+id/fabRevealData"
            android:tooltipText="@string/revealPassword"
            android:textSize="14sp"
            android:background="@drawable/btnshape"
            android:src="@drawable/baseline_remove_red_eye_24"
            android:contentDescription="@string/revealPassword" />
        <ImageButton
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:id="@+id/fabCopyData"
            android:tooltipText="@string/revealPassword"
            android:textSize="14sp"
            android:background="@drawable/btnshape"
            android:backgroundTint="@color/contentCopy"
            android:src="@drawable/baseline_content_copy_24"
            android:contentDescription="@string/revealPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:id="@+id/fabChangeData"
            android:tooltipText="@string/sendData"
            android:textSize="14sp"
            android:background="@drawable/btnshape"
            android:backgroundTint="@color/submit"
            android:src="@drawable/baseline_check_24"
            android:contentDescription="@string/sendData" />

    </LinearLayout>
</LinearLayout>